--- a/Habr/Common/Resourses/ExceptionMessages.resx
+++ b/Habr/Common/Resourses/ExceptionMessages.resx
@@ -171,6 +171,9 @@
   <data name="PostNotFound" xml:space="preserve">
     <value>Post not found</value>
   </data>
+  <data name="RefreshTokenInvalid" xml:space="preserve">
+    <value>Refresh token is invalid</value>
+  </data>
   <data name="RemovingPostWithComments" xml:space="preserve">
     <value>User can't remove post with comments to drafts</value>
   </data>
