--- a/Habr/Common/Resourses/ExceptionMessages.resx
+++ b/Habr/Common/Resourses/ExceptionMessages.resx
@@ -174,6 +174,14 @@
   <data name="PostNotFound" xml:space="preserve">
     <value>Post not found</value>
   </data>
+  <data name="RateTooBig" xml:space="preserve">
+    <value>Maximum rating is {0} points</value>
+    <comment>Interpolated string</comment>
+  </data>
+  <data name="RateTooSmall" xml:space="preserve">
+    <value>Minimum rating is {0} points</value>
+    <comment>Interpolated string</comment>
+  </data>
   <data name="RefreshTokenInvalid" xml:space="preserve">
     <value>Refresh token is invalid</value>
   </data>
